# rust-assignment

./: .gitignore  Cargo.toml
benches/: all_benches.rs  criterion_main.rs  processor_benchmark.rs  sensor_benchmark.rs
sensors/: generator.rs  processor.rs  transmitter.rs
src/: config.rs  lib.rs  main.rs
src/actuator/: controller.rs  executor.rs  mod.rs  receiver.rs  scheduler.rs  system.rs
src/common/: constants.rs  data_types.rs  metrics.rs  mod.rs
src/sensor/: generator.rs  mod.rs  processor.rs  transmitter.rs
