[package]
name = "rust-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full", "time"] }
crossbeam-channel = "0.5"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2", features = ["derive"] }
rolling-stats = "0.7.0"
criterion = "0.6"      # For benchmarking
chrono = "0.4"         # For time tracking
plotters = "0.3"       # For visualization

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
