[package]
name = "rust_assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full", "time"] }
crossbeam-channel = "0.5"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2", features = ["derive"] }
rolling-stats = "0.7.0"
criterion = "0.6"
chrono = "0.4"
plotters = "0.3"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "sensor_benchmark"
harness = false
